<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/userNameView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/nameView"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/pwView"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameView" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="235dp"
        android:layout_height="55dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/passwordView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/loginView"
        android:layout_width="348dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:fontFeatureSettings="bold"
        android:text="@string/loginView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="155dp"
        android:layout_height="95dp"
        android:layout_marginTop="276dp"
        android:text="@string/login_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userInput"
        android:layout_width="235dp"
        android:layout_height="55dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginView"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/googleButton"
        android:layout_width="129dp"
        android:layout_height="100dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/existingUser"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/existingUser"
        android:layout_width="158dp"
        android:layout_height="89dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="42dp"
        android:text="@string/registered_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <TextView
        android:id="@+id/googleSignInView"
        android:layout_width="116dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="80dp"
        android:text="@string/google_prompt"
        app:layout_constraintEnd_toStartOf="@+id/googleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>