<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/welcomeView"
        android:layout_width="138dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customUserView"
        android:layout_width="92dp"
        android:layout_height="31dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="78dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/welcomeView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mainPhoto"
        android:layout_width="352dp"
        android:layout_height="234dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customUserView"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:background="@color/purple_700"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/takePhotosButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="22dp"
        android:text="@string/take_photos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainPhoto" />

    <Button
        android:id="@+id/showPhotosButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="49dp"
        android:text="@string/browse_photos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/takePhotosButton"
        app:layout_constraintTop_toBottomOf="@+id/mainPhoto" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="33dp"
        android:text="@string/edit_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePhotosButton" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="42dp"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editProfileButton"
        app:layout_constraintTop_toBottomOf="@+id/showPhotosButton" />

</androidx.constraintlayout.widget.ConstraintLayout>